--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -137,6 +137,15 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   // Border colors
   $btn-border: if($c!=$bg_color, _border_color($c), darken($borders_color, 12%));
   $btn-focus: if($variant == 'light', 0 0 0 2px transparentize($selected_bg_color, 0.85), 0 0 0 2px transparentize($selected_bg_color, 1.0));
+  $btn-shadow: 
+    1px 0 transparentize(black, 0.92), 
+    0 1px transparentize(black, 0.92), 
+    -1px 0 transparentize(black, 0.92), 
+    0 -1px transparentize(black, 0.92),
+    inset 1px 0 if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94)),
+    inset 0 1px if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94)),
+    inset -1px 0 if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94)),
+    inset 0 -1px if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94));
 
   $_button_edge: if($edge == none, none, _widget_edge($edge));
   $_blank_edge: if($edge == none, none, _widget_edge(transparentize($edge, 1)));
@@ -147,6 +156,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     outline-color: transparentize($tc, 0.7);
     border-color: $btn-border;
     background-color: lighten($c, 5%);
+    box-shadow: $btn-shadow;
   }
   @if $t==normal-alt {
   // normal button alternative look
