--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -113,6 +113,46 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else { @return darken($c, 20%); }
 }
 
+@mixin btn-shadow($children: true) {
+  @if $children or $children == false {
+    & {
+      box-shadow: 1px 0 transparentize(black, 0.92), 
+        0 1px 1px transparentize(black, 0.8), 
+        0 2px transparentize(black, 0.92), 
+        -1px 0 transparentize(black, 0.92), 
+        0 -1px transparentize(black, 0.92),
+        inset 0 1px transparentize(white, 0.94);
+    }
+  }
+  @elseif $children or $children == first-child {
+    &:first-child {
+      box-shadow: 0 0 transparentize(black, 0.92), 
+        0 1px 1px transparentize(black, 0.8), 
+        -1px 0 transparentize(black, 0.92), 
+        0 -1px transparentize(black, 0.92),
+        inset 0 1px transparentize(white, 0.94);
+    }
+  }
+  @elseif $children or $children == last-child {
+    &:last-child {
+      box-shadow: 1px 0 transparentize(black, 0.92), 
+        0 1px 1px transparentize(black, 0.8), 
+        0 0 transparentize(black, 0.92), 
+        0 -1px transparentize(black, 0.92),
+        inset 0 1px transparentize(white, 0.94);
+    }
+  }
+  @elseif $children or $children == only-child {
+    &:only-child {
+      box-shadow: 1px 0 transparentize(black, 0.92), 
+        0 1px 1px transparentize(black, 0.8), 
+        -1px 0 transparentize(black, 0.92), 
+        0 -1px transparentize(black, 0.92),
+        inset 0 1px transparentize(white, 0.94);
+    }
+  }
+}
+
 @mixin button($t, $c:$bg_color, $tc:$fg_color, $edge: $borders_edge, $dc: $dark_bg_color, $dfc: $dark_fg_color) {
 //
 // Button drawing function
@@ -139,13 +179,10 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   $btn-focus: if($variant == 'light', 0 0 0 2px transparentize($selected_bg_color, 0.85), 0 0 0 2px transparentize($selected_bg_color, 1.0));
   $btn-shadow: 
     1px 0 transparentize(black, 0.92), 
-    0 1px transparentize(black, 0.92), 
+    0 1px 2px transparentize(black, 0.8), 
     -1px 0 transparentize(black, 0.92), 
     0 -1px transparentize(black, 0.92),
-    inset 1px 0 if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94)),
-    inset 0 1px if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94)),
-    inset -1px 0 if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94)),
-    inset 0 -1px if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94));
+    inset 0 1px if($variant == 'light', transparentize(white, 0.6), transparentize(white, 0.94));
 
   $_button_edge: if($edge == none, none, _widget_edge($edge));
   $_blank_edge: if($edge == none, none, _widget_edge(transparentize($edge, 1)));
@@ -154,9 +191,9 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   // normal button
     color: $tc;
     outline-color: transparentize($tc, 0.7);
-    border-color: $btn-border;
+    //border-color: $btn-border;
     background-color: lighten($c, 5%);
-    box-shadow: $btn-shadow;
+    @include btn-shadow();
   }
   @if $t==normal-alt {
   // normal button alternative look
@@ -177,8 +214,8 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
   @else if $t==focus {
   // focused button
     color: $tc;
-    box-shadow: $btn-focus;
-    border-color: $selected_bg_color;
+    //box-shadow: $btn-focus;
+    //border-color: $selected_bg_color;
   }
 
   @else if $t==active {
@@ -230,7 +267,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
     outline-color: transparentize($tc, 0.7);
     border-color: $dark_borders_color;
     background-color: lighten($dc, 10%);
-    box-shadow: 0 1px transparentize(black, 0.5);
+    @include btn-shadow();
   }
   @else if $t==headerbutton-hover {
   // hovered header button
